fix forums overflowing

--- a/src/page-styles/Forum.css
+++ b/src/page-styles/Forum.css
@@ -5,6 +5,7 @@
     justify-content: flex-end;
     align-items: center;
     background-color: white;
+    padding-bottom: 25vh;
 }
 
 .comment-box{
